--- a/rider/build.gradle
+++ b/rider/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -42,7 +43,7 @@ dependencies {
 
 
     //Droid client for communicating with micro-services todo
-    implementation ('com.it.soul.lab:jsql-editor:1.1.0-SNAPSHOT'){
+    implementation('com.it.soul.lab:jsql-editor:1.1.0-SNAPSHOT') {
         exclude group: 'mysql'
         exclude group: 'com.datastax.cassandra'
         exclude group: 'com.google.guava'
@@ -50,12 +51,12 @@ dependencies {
         exclude group: 'io.netty'
     }
 
-    implementation ('com.itsoul.lab:micro-service-core:1.0'){
+    implementation('com.itsoul.lab:micro-service-core:1.0') {
         exclude group: 'com.codahale.metrics'
         exclude group: 'io.netty'
     }
 
-    implementation ('com.itsoul.lab:geo-tracker-micro-core:1.0'){
+    implementation('com.itsoul.lab:geo-tracker-micro-core:1.0') {
         exclude group: 'javax.persistence'
         exclude group: 'org.hibernate'
         exclude group: 'mysql'
@@ -65,7 +66,7 @@ dependencies {
         exclude group: 'io.netty'
     }
     implementation project(":GeoTrackerAndroidKit")
-    implementation ('com.itsoul.lab:dailygoods-domain:1.0-SNAPSHOT'){
+    implementation('com.itsoul.lab:dailygoods-domain:1.0-SNAPSHOT') {
         exclude group: 'com.itsoul.lab'
     }
 
@@ -92,6 +93,9 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     //
     implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
+
+    implementation project(path: ':libshared')
 }
 
 //apply plugin: 'com.google.gms.google-services'
+
