--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        hamcrestVersion = '1.3'
+        mockitoVersion = "2.8.9"
+        mockitoKotlinVersion = "1.5.0"
+        gsonVersion = "2.8.1"
+        junitVersion = '4.12'
+        okhttpVersion = '4.1.0'
+        kotlinVersion = '1.3.10'
+    }
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +26,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
         
