--- a/rider/build.gradle
+++ b/rider/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -31,16 +33,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
-    // google map dependencies
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
-
 
     //Droid client for communicating with micro-services todo
     implementation('com.it.soul.lab:jsql-editor:1.1.0-SNAPSHOT') {
@@ -51,28 +43,22 @@ dependencies {
         exclude group: 'io.netty'
     }
 
+    // google map dependencies
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
     implementation('com.itsoul.lab:micro-service-core:1.0') {
         exclude group: 'com.codahale.metrics'
         exclude group: 'io.netty'
     }
 
-    implementation('com.itsoul.lab:geo-tracker-micro-core:1.0') {
-        exclude group: 'javax.persistence'
-        exclude group: 'org.hibernate'
-        exclude group: 'mysql'
-        exclude group: 'com.datastax.cassandra'
-        exclude group: 'com.google.guava'
-        exclude group: 'com.codahale.metrics'
-        exclude group: 'io.netty'
-    }
-    implementation project(":GeoTrackerAndroidKit")
     implementation('com.itsoul.lab:dailygoods-domain:1.0-SNAPSHOT') {
         exclude group: 'com.itsoul.lab'
     }
-
-    def lifecycle_version = "1.1.1"
-    // ViewModel and LiveData
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
@@ -95,6 +81,19 @@ dependencies {
     implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
 
     implementation project(path: ':libshared')
+
+    api 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    // Local unit tests
+    testImplementation "junit:junit:$rootProject.junitVersion"
+    testImplementation "org.mockito:mockito-core:$rootProject.mockitoVersion"
+    testImplementation "com.nhaarman:mockito-kotlin:$rootProject.mockitoKotlinVersion"
+    testImplementation "org.hamcrest:hamcrest-library:$rootProject.hamcrestVersion"
+
 }
 
 //apply plugin: 'com.google.gms.google-services'
