--- a/rider/src/main/AndroidManifest.xml
+++ b/rider/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="lab.itsoul.com.deliman.rider.ui.home.KotlinActivity"></activity>
-        <activity android:name="lab.itsoul.com.deliman.rider.ui.home.VerificationActivity">
+        <activity android:name="lab.itsoul.com.deliman.rider.ui.rider.RiderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
