--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lab.itsoul.com.deliman.rider.startup">
+    package="lab.itsoul.com.deliman.starter.startup">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="lab.itsoul.com.deliman.rider.ui.app.AppActivity">
+        <activity android:name="lab.itsoul.com.deliman.starter.ui.app.AppActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="lab.itsoul.com.deliman.rider.ui.SplashActivity"
+            android:name="lab.itsoul.com.deliman.starter.ui.SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
