--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "lab.itsoul.com.delimanrider"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,15 +34,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 
-    //Droid client for communicating with micro-services todo
-    implementation('com.it.soul.lab:jsql-editor:1.1.0-SNAPSHOT') {
-        exclude group: 'mysql'
-        exclude group: 'com.datastax.cassandra'
-        exclude group: 'com.google.guava'
-        exclude group: 'com.codahale.metrics'
-        exclude group: 'io.netty'
-    }
-
     // google map dependencies
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
@@ -50,15 +41,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:16.0.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-
-    implementation('com.itsoul.lab:micro-service-core:1.0') {
-        exclude group: 'com.codahale.metrics'
-        exclude group: 'io.netty'
-    }
-
-    implementation('com.itsoul.lab:dailygoods-domain:1.0-SNAPSHOT') {
-        exclude group: 'com.itsoul.lab'
-    }
 
     // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
@@ -80,6 +62,36 @@ dependencies {
     //
     implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
 
+    //Droid client for communicating with micro-services todo
+    implementation('com.it.soul.lab:jsql-editor:1.1.3-SNAPSHOT') {
+        exclude group: 'mysql'
+        exclude group: 'com.datastax.cassandra'
+        exclude group: 'com.google.guava'
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:micro-rules-validation-engine:1.1') {
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:micro-actorpool:1.1.2') {
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:micro-service-core:1.1') {
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:geo-tracker-micro-core:1.1') {
+        exclude group: 'javax.persistence'
+        exclude group: 'org.hibernate'
+        exclude group: 'mysql'
+        exclude group: 'com.datastax.cassandra'
+        exclude group: 'com.google.guava'
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation project(path: ':GeoTrackerAndroidKit')
     implementation project(path: ':libshared')
 
     api 'com.google.dagger:dagger:2.16'
