--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+
     compileSdkVersion 28
 
-
     defaultConfig {
-        minSdkVersion 20
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -42,20 +42,26 @@ dependencies {
     api 'com.google.guava:guava:28.0-android'
 
     //Droid client for communicating with micro-services todo
-    implementation('com.it.soul.lab:jsql-editor:1.1.0-SNAPSHOT') {
+    implementation('com.it.soul.lab:jsql-editor:1.1.3-SNAPSHOT') {
         exclude group: 'mysql'
         exclude group: 'com.datastax.cassandra'
         exclude group: 'com.google.guava'
         exclude group: 'com.codahale.metrics'
         exclude group: 'io.netty'
     }
-
-    implementation('com.itsoul.lab:micro-service-core:1.0') {
+    implementation('com.itsoul.lab:micro-rules-validation-engine:1.1') {
         exclude group: 'com.codahale.metrics'
         exclude group: 'io.netty'
     }
-
-    implementation('com.itsoul.lab:geo-tracker-micro-core:1.0') {
+    implementation('com.itsoul.lab:micro-actorpool:1.1.2') {
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:micro-service-core:1.1') {
+        exclude group: 'com.codahale.metrics'
+        exclude group: 'io.netty'
+    }
+    implementation('com.itsoul.lab:geo-tracker-micro-core:1.1') {
         exclude group: 'javax.persistence'
         exclude group: 'org.hibernate'
         exclude group: 'mysql'
@@ -63,9 +69,6 @@ dependencies {
         exclude group: 'com.google.guava'
         exclude group: 'com.codahale.metrics'
         exclude group: 'io.netty'
-    }
-    implementation('com.itsoul.lab:dailygoods-domain:1.0-SNAPSHOT') {
-        exclude group: 'com.itsoul.lab'
     }
     implementation project(path: ':GeoTrackerAndroidKit')
 
