Lots of Dependency added for future startup code base

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="lab.itsoul.com.deliman.starter.startup">
 
     <application
+        android:name="lab.itsoul.com.deliman.starter.ui.app.StarterApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="lab.itsoul.com.deliman.starter.ui.app.AppActivity">
+        <activity android:name="lab.itsoul.com.deliman.starter.ui.activities.app.AppActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="lab.itsoul.com.deliman.starter.ui.SplashActivity"
+            android:name="lab.itsoul.com.deliman.starter.ui.activities.splash.SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
