--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -3,38 +3,49 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-
     compileSdkVersion 28
-
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    repositories {
+        mavenLocal()
+        maven { url "https://jitpack.io" }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+        res {
+            srcDirs 'src/main/res', 'src/main/res/drawable', 'src/main/res/layout'
+        }
+    } }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    // google map dependencies
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    //implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    //implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
@@ -74,6 +85,21 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
+
+    //stomp client
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.5.4'
+    //rxandroid
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    //java websocket
+    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
+    //
+    implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
+    //
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    //
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    //
 
     // Local unit tests
     testImplementation "junit:junit:$rootProject.junitVersion"
