--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "lab.itsoul.com.delimanrider"
-        minSdkVersion 24
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -63,12 +63,10 @@ dependencies {
     implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
 
     //Droid client for communicating with micro-services todo
-    implementation 'com.it.soul.lab:jsql-editor:1.1.3-SNAPSHOT'
-    implementation 'com.itsoul.lab:micro-rules-validation-engine:1.1'
-    implementation 'com.itsoul.lab:micro-actorpool:1.1.2'
-    implementation 'com.itsoul.lab:micro-service-core:1.1'
-    implementation 'com.itsoul.lab:geo-tracker-micro-core:1.1'
-    implementation project(path: ':GeoTrackerAndroidKit')
+    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.1-SNAPSHOT'
+    implementation ('com.github.itsoulltd.WebComponentKit:http-rest-client:v1.1-RELEASE'){
+        exclude group: 'org.glassfish', module: 'javax.json'
+    }
     implementation project(path: ':libshared')
 
     api 'com.google.dagger:dagger:2.16'
