--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -53,12 +53,10 @@ dependencies {
     api 'com.google.guava:guava:28.0-android'
 
     //Droid client for communicating with micro-services todo
-    implementation 'com.it.soul.lab:jsql-editor:1.1.3-SNAPSHOT'
-    implementation 'com.itsoul.lab:micro-rules-validation-engine:1.1'
-    implementation 'com.itsoul.lab:micro-actorpool:1.1.2'
-    implementation 'com.itsoul.lab:micro-service-core:1.1'
-    implementation 'com.itsoul.lab:geo-tracker-micro-core:1.1'
-    implementation project(path: ':GeoTrackerAndroidKit')
+    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.1-SNAPSHOT'
+    implementation ('com.github.itsoulltd.WebComponentKit:http-rest-client:v1.1-RELEASE'){
+        exclude group: 'org.glassfish', module: 'javax.json'
+    }
 
     implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
