--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -33,6 +34,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.0'
+
+    api 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // google map dependencies
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
@@ -40,40 +49,27 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-nearby:16.0.0'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-
-    // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    //multidex
-    implementation 'androidx.multidex:multidex:2.0.0'
-    //stomp client
-    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.5.4'
-    //rxandroid
+    //Json-Parser and Validation:
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    //OkHttp
+    implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
+    testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
+    //java WebSocket
+    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
+    //Rx-android
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    //java websocket
-    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
-    //
+    //GeoHash-Lib
     implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
-    //
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    //
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     //
     implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
 
     //Droid client for communicating with micro-services todo
-    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.1-SNAPSHOT'
-    implementation ('com.github.itsoulltd.WebComponentKit:http-rest-client:v1.1-RELEASE'){
-        exclude group: 'org.glassfish', module: 'javax.json'
-    }
+    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.2-RELEASE'
+    implementation 'com.github.itsoulltd.WebComponentKit:http-rest-client:1.10.2-RELEASE'
     implementation project(path: ':libshared')
 
-    api 'com.google.dagger:dagger:2.16'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // Local unit tests
     testImplementation "junit:junit:$rootProject.junitVersion"
@@ -82,6 +78,4 @@ dependencies {
     testImplementation "org.hamcrest:hamcrest-library:$rootProject.hamcrestVersion"
 
 }
-
-//apply plugin: 'com.google.gms.google-services'
 
