--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -46,35 +46,30 @@ dependencies {
     //implementation 'com.google.android.gms:play-services-nearby:16.0.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     api 'com.google.guava:guava:28.0-android'
 
-    //Droid client for communicating with micro-services todo
-    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.1-SNAPSHOT'
-    implementation ('com.github.itsoulltd.WebComponentKit:http-rest-client:v1.1-RELEASE'){
-        exclude group: 'org.glassfish', module: 'javax.json'
-    }
-
+    //OkHttp
     implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
+    //Java WebSocket:
+    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
 
-    //stomp client
-    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.5.4'
-    //rxandroid
+    //Rx-android
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    //java websocket
-    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
-    //
+    //GeoHash-Lib:
     implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
-    //
+    //Json-Parser and Validation:
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    //
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     //
+
+    //Droid client for communicating with micro-services todo
+    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.2-RELEASE'
+    implementation 'com.github.itsoulltd.WebComponentKit:http-rest-client:1.10.2-RELEASE'
 
     // Local unit tests
     testImplementation "junit:junit:$rootProject.junitVersion"
