--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="lab.infoworks.starter.ui.activities.app.AppActivity">
-        </activity>
+
         <activity
             android:name="lab.infoworks.starter.ui.activities.splash.SplashActivity"
             android:label="@string/title_activity_splash"
@@ -27,7 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="landingPage" android:value="lab.infoworks.starter.ui.activities.app.AppActivity"/>
         </activity>
+
+        <activity android:name="lab.infoworks.starter.ui.activities.app.AppActivity"/>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
