--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.multidex:multidex:2.0.0'
-
+    // Dagger:
     api 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-
+    //ButterKnife:
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
@@ -74,6 +74,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+    //implementation 'com.google.code.gson:gson:2.8.5'
+    //api 'com.google.guava:guava:28.0-android'
 
     //Json-Parser and Validation:
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
@@ -89,7 +91,6 @@ dependencies {
     //GeoHash-Lib
     implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
     //
-    implementation 'com.eyalbira.loadingdots:loading-dots:1.0.2'
 
     //Droid client for communicating with micro-services todo
     implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.3-RELEASE'
