--- a/libshared/src/main/AndroidManifest.xml
+++ b/libshared/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lab.infoworks.libshared" />
+    package="lab.infoworks.libshared" >
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
