--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,16 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.multidex:multidex:2.0.0'
+
     // Dagger:
     api 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
@@ -95,8 +99,10 @@ dependencies {
     //Droid client for communicating with micro-services todo
     implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.3-RELEASE'
     implementation 'com.github.itsoulltd.WebComponentKit:http-rest-client:1.10.2-RELEASE'
-    implementation project(path: ':libshared')
 
+    //Linking-lib modules
+    implementation project(path: ':libshared')
+    implementation project(path: ':libUI')
 
     // Local unit tests
     testImplementation "junit:junit:$rootProject.junitVersion"
