--- a/libUI/build.gradle
+++ b/libUI/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -44,31 +44,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
+    //ButterKnife:
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
-    //Room-DB
-    def room_version = "2.2.5"
-    implementation "androidx.room:room-runtime:$room_version"
-    // For Kotlin use kapt instead of annotationProcessor
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    //OkHttp
-    implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
-    testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
-    //Java WebSocket:
-    implementation 'org.java-websocket:Java-WebSocket:1.3.6'
-    //Rx-android
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    //GeoHash-Lib:
-    implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
-    //Json-Parser and Validation:
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-    //
-
-    //Droid client for communicating with micro-services todo
-    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.3-RELEASE'
-    implementation 'com.github.itsoulltd.WebComponentKit:http-rest-client:1.10.2-RELEASE'
+    //Linking-lib modules
+    implementation project(path: ':libshared')
 
     // Local unit tests
     testImplementation "junit:junit:$rootProject.junitVersion"
