--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         mockitoKotlinVersion = "1.5.0"
         gsonVersion = "2.8.1"
         junitVersion = '4.12'
+        retrofit2 = '2.9.0'
         okhttpVersion = '4.1.0'
         kotlinVersion = '1.3.10'
     }
