--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     //OkHttp
     implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
+    //Retrofit-2
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit2"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2"
+    implementation "com.squareup.retrofit2:converter-jackson:$rootProject.retrofit2"
     //Java WebSocket:
     implementation 'org.java-websocket:Java-WebSocket:1.3.6'
     //Rx-android
