--- a/libUI/build.gradle
+++ b/libUI/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
+    //Droid client for communicating with micro-services todo
+    implementation 'com.github.itsoulltd:JSQLEditor:1.1.3.3-RELEASE'
     //Linking-lib modules
     implementation project(path: ':libshared')
 
