--- a/libshared/src/main/AndroidManifest.xml
+++ b/libshared/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
     package="lab.infoworks.libshared" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 </manifest>
