--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,15 @@ apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "lab.infoworks.starter"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -85,7 +86,10 @@ dependencies {
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     //OkHttp
-    implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
+    //implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
+    implementation ("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"){
+        force = true //API 19 support
+    }
     testImplementation("com.squareup.okhttp3:mockwebserver:$rootProject.okhttpVersion")
     //java WebSocket
     implementation 'org.java-websocket:Java-WebSocket:1.3.6'
