adding SSL-Pinning Using OkHttpClient

--- a/app/prod.properties
+++ b/app/prod.properties
@@ -1,1 +1,4 @@
 api_gateway="https://myspace.com/api/v1/"
+domain_name="www.myspace.com"
+#https://tech.groww.in/ssl-pinning-in-android-part-2-b591dfc8c2f1
+ssl_public_key="sha256/your-public-key"
